tests/predicates_inferred/predicates_inferred.exp
Error ------------------------------------------------------------------------------------- sanity-multi-params.js:10:12

Cannot return `x` because array type [1] is incompatible with string [2].

   sanity-multi-params.js:10:12
   10|     return x;
                  ^

References:
   sanity-multi-params.js:8:26
    8| function foo(x: string | Array<string>): string {
                                ^^^^^^^^^^^^^ [1]
   sanity-multi-params.js:8:42
    8| function foo(x: string | Array<string>): string {
                                                ^^^^^^ [2]


Error ------------------------------------------------------------------------------------- sanity-multi-params.js:12:14

Cannot call `x.join` because property `join` is missing in `String` [1].

   sanity-multi-params.js:12:14
   12|     return x.join();
                    ^^^^

References:
   sanity-multi-params.js:8:17
    8| function foo(x: string | Array<string>): string {
                       ^^^^^^ [1]


Error -------------------------------------------------------------------------------------- sanity-unbound-var.js:13:12

Cannot return `x` because array type [1] is incompatible with string [2].

   sanity-unbound-var.js:13:12
   13|     return x;
                  ^

References:
   sanity-unbound-var.js:11:26
   11| function foo(x: string | Array<string>): string {
                                ^^^^^^^^^^^^^ [1]
   sanity-unbound-var.js:11:42
   11| function foo(x: string | Array<string>): string {
                                                ^^^^^^ [2]


Error -------------------------------------------------------------------------------------- sanity-unbound-var.js:15:14

Cannot call `x.join` because property `join` is missing in `String` [1].

   sanity-unbound-var.js:15:14
   15|     return x.join();
                    ^^^^

References:
   sanity-unbound-var.js:11:17
   11| function foo(x: string | Array<string>): string {
                       ^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- sanity.js:5:20

Cannot declare predicate when a function body is present.

   5| function check(y): %checks(typeof y === "string") {
                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------------------------------- sanity.js:16:41

Invalid body for predicate function. Expected a simple return statement as body.

                                               v
   16| function indirect_is_number(y): %checks {
   17|   var y = 1;
   18|   return typeof y === "number";
   19| }
       ^


Error -------------------------------------------------------------------------------------------------- wf-eval.js:5:42

The return type of a predicate function cannot contain a generic type. The function predicate will be ignored here.

   5| function f3<V>(x: V): $Call<<V>(V) => V, V> %checks { return x; } // error
                                               ^


Error ------------------------------------------------------------------------------------------- wf-polymorphic.js:3:23

The return type of a predicate function cannot contain a generic type. The function predicate will be ignored here.

   3| function f1<X>(x: X): X %checks { return x; } // error: poly return in %checks
                            ^


Error ------------------------------------------------------------------------------------------- wf-polymorphic.js:4:24

The return type of a predicate function cannot contain a generic type. The function predicate will be ignored here.

   4| function f2<X>(x: X): [X, X] %checks { return [x, x]; } // error: poly return in %checks
                             ^


Error ------------------------------------------------------------------------------------------- wf-polymorphic.js:4:27

The return type of a predicate function cannot contain a generic type. The function predicate will be ignored here.

   4| function f2<X>(x: X): [X, X] %checks { return [x, x]; } // error: poly return in %checks
                                ^


Error ------------------------------------------------------------------------------------------- wf-polymorphic.js:8:30

The return type of a predicate function cannot contain a generic type. The function predicate will be ignored here.

   8| declare function g<X>(x: X): X %checks(x); // error: poly return in %checks
                                   ^



Found 11 errors
